# device-sdk

./: .clang-format  .editorconfig  .editorconfig-checker.json  .gitattributes  .gitignore  .mega-linter.yml  CHANGELOG.md  CODING_STYLE.md  Cargo.toml  LICENSE.MD  README.md  clippy.toml  west-ncs.yml  west-zephyr.yml
esp_idf/spotflow/: CMakeLists.txt  Kconfig.configs  Kconfig.coredump  Kconfig.logging  Kconfig.projbuild  LICENSE.MD  README.md  idf_component.yml  patch_build_id.cmake  spotflow.c  spotflow_mqtt.c
esp_idf/spotflow/device_sdk/: CMakeLists.txt  Kconfig.buildid  Kconfig.configs  Kconfig.logging  Kconfig.metrics  Kconfig.metrics_systems  Kconfig.projbuild  LICENSE.md  spotflow.c
esp_idf/spotflow/include/: spotflow.h  spotflow_log.h  spotflow_mqtt.h
esp_idf/spotflow/scripts/: patch_build_id.py
spotflow/: CHANGELOG.md  Cargo.toml  README-CRATE.md  sqlx-data.json
spotflow-c/: CHANGELOG.md  Cargo.toml  cbindgen.toml  pack.ps1
spotflow-c/src/: dps.rs  lib.rs
spotflow-c/src/ingress/: mod.rs  twins.rs
spotflow-py/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  spotflow_device.pyi
spotflow-py/src/: dps.rs  lib.rs
spotflow-py/src/ingress/: mod.rs  twins.rs
spotflow/examples/common/: platform_caller.rs
spotflow/src/: lib.rs
spotflow/src/cloud/: api_core.rs  dps.rs  drs.rs  duration_wrapper.rs
spotflow/src/connection/: twins.rs
spotflow/src/ingress/: base.rs  builder.rs  c2d.rs  mod.rs
spotflow/src/iothub/: eventloop.rs  json_diff.rs  mod.rs  query.rs  sender.rs  token_handler.rs  topics.rs
spotflow/src/persistence/: c2d.rs  mod.rs  sqlite.rs  sqlite_channel.rs  twins.rs
spotflow/src/remote_access/: connections.rs  mod.rs
spotflow/src/utils/: thread.rs
spotflow/tests/: c2d.rs  ingress.rs  remote_access.rs
zephyr/: .clangd  CMakeLists.txt  Kconfig  west-ncs.yml  west-zephyr-nxp.yml
zephyr/ci/: README.md  boards.yml  generate_matrix.py  generate_quickstart_json.py  run_twister.ps1  run_twister.sh  spotflowup.ps1  spotflowup.sh
zephyr/design/metrics/: IMPLEMENTATION_CHECKLIST.md  README.md  api_specification.md  architecture.md  implementation_guide.md  ingestion_protocol_specification.md  system_metrics_api.md  system_metrics_architecture.md
zephyr/docs/: ota-design.md
zephyr/include/spotflow/: downloader.h  ota.h
zephyr/manifests/: west-ncs.yml  west-zephyr-espressif.yml  west-zephyr-infineon.yml  west-zephyr-microchip.yml  west-zephyr-native-sim.yml  west-zephyr-nxp-frdm-rw612.yml  west-zephyr-nxp.yml  west-zephyr-raspberrypi-pico-w.yml  west-zephyr-raspberrypi.yml  west-zephyr-renesas.yml  west-zephyr-silabs.yml  west-zephyr-st.yml  west-zephyr.yml
zephyr/samples/ble/: BLE Design POC.md  BLE Logs Transport Plan.md  CMakeLists.txt  prj.conf  sample.yaml
zephyr/samples/common/: wifi.c
zephyr/samples/coredumps/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  pm_static_nrf7002dk_nrf5340_cpuapp.yml  pm_static_nrf7002dk_nrf5340_cpuapp_ns.yml  prj.conf
zephyr/samples/coredumps-eth/: CMakeLists.txt  credentials-sample.conf  prj.conf
zephyr/samples/logs/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf
zephyr/samples/metrics/: CMakeLists.txt  README.md  README.rst  api.md  architecture_comments.txt  credentials-sample.conf  ingestion_protocol.md  prj.conf
zephyr/samples/net-common/: CMakeLists.txt  Kconfig  eth.c  eth.h  net.c  net.h  wifi.c
zephyr/samples/ota/: CMakeLists.txt  README.md  prj.conf
zephyr/samples/wifi/: CMakeLists.txt  Kconfig  README.rst  prj.conf
zephyr/samples/wifi-common/: CMakeLists.txt  wifi.h
zephyr/samples/wifi-coredumps/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf
zephyr/samples/wifi-logs/: CMakeLists.txt  credentials-sample.conf  prj.conf
zephyr/scripts/: patch_build_id.py  requirements.txt
zephyr/scripts/tests/: conftest.py  test_patch_build_id.py
zephyr/src/: CMakeLists.txt  spotflow_build_id.c  spotflow_build_id.h  version_helper.h
zephyr/src/config/: CMakeLists.txt  Kconfig  spotflow_config.c  spotflow_config.h  spotflow_config_cbor.c  spotflow_config_cbor.h  spotflow_config_net.c  spotflow_config_net.h  spotflow_config_options.c  spotflow_config_options.h  spotflow_config_persistence.c  spotflow_config_persistence.h
zephyr/src/coredumps/: CMakeLists.txt  KConfig  KConfig.coredumps  spotflow_cbor.c  spotflow_cbor.h  spotflow_coredump_backend.c  spotflow_coredump_backend.h  spotflow_coredumps_backend.c  spotflow_coredumps_backend.h  spotflow_coredumps_cbor.c  spotflow_coredumps_cbor.h  spotflow_coredumps_net.c  spotflow_coredumps_net.h  spotflow_reboot.c
zephyr/src/logging/: CMakeLists.txt  KConfig  KConfig.logging  cbor_output_context_spotflow.c  cbor_output_context_spotflow.h  cbor_spotflow.c  cbor_spotflow.h  log_backend_spotflow.c  spotflow_cbor.c  spotflow_cbor.h  spotflow_cbor_output_context.c  spotflow_cbor_output_context.h  spotflow_log_backend.c  spotflow_log_backend.h  spotflow_log_cbor.c  spotflow_log_cbor.h  spotflow_log_filter.c  spotflow_log_filter.h  spotflow_log_net.c  spotflow_log_net.h  spotflow_log_processor.c  spotflow_log_processor.h
zephyr/src/metrics/: CMakeLists.txt  Kconfig  Kconfig.system  spotflow_metrics.c  spotflow_metrics.h  spotflow_metrics_aggregator.c  spotflow_metrics_aggregator.h  spotflow_metrics_backend.c  spotflow_metrics_backend.h  spotflow_metrics_cbor.c  spotflow_metrics_cbor.h  spotflow_metrics_heartbeat.c  spotflow_metrics_heartbeat.h  spotflow_metrics_net.c  spotflow_metrics_net.h  spotflow_metrics_registry.c  spotflow_metrics_registry.h  spotflow_metrics_system.c  spotflow_metrics_system.h  spotflow_metrics_types.h  spotflow_reset_helper.c  spotflow_reset_helper.h  spotflow_system_metrics.c  spotflow_system_metrics.h
zephyr/src/net/: CMakeLists.txt  Kconfig  Kconfig.ble  Kconfig.mqtt  certs_spotflow.h  spotflow_ble_framing.c  spotflow_ble_gatt.c  spotflow_ble_transport.c  spotflow_ble_transport_internal.h  spotflow_certs.h  spotflow_config.c  spotflow_config.h  spotflow_config_cbor.c  spotflow_config_cbor.h  spotflow_config_options.c  spotflow_config_options.h  spotflow_config_persistence.c  spotflow_device_id.c  (+13 more)
(+414 files in other folders)
