[package]
name = "spotflow-c"
version = "2.1.1"
edition = "2021"

[lib]
name = "spotflow"
# If we want also build staticlib uncomment the next line. If this is ucommented the example with CMake does not work
crate-type = ["cdylib", "staticlib"]
# crate-type = ["cdylib"]

[dependencies]
spotflow = { path = "../spotflow", version = "0.7.0", features = ["openssl-vendored"] }
anyhow = "1.0.57"
chrono = "0.4.20"
simple_logger = { version = "5.0.0", features = ["stderr"] }
http = "1.1.0"
# Used because stable std does not have c_size_t
libc = "0.2.121"
log = "0.4.16"

[build-dependencies]
cbindgen = "0.26.0"
