[package]
name = "spotflow-py"
version = "2.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spotflow_device"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.19"
spotflow = { path = "../spotflow", version = "0.7.0", features = ["openssl-vendored"]  }
http = "1.1.0"
log = "0.4.17"
pyo3 = { version = "0.19.0", features = ["extension-module", "serde", "abi3-py37"] }
pyo3-log = "0.8.2"
serde_json = "1.0.83"
tokio = { version = "1.17.0", features = ["rt"] }
tokio-util = "0.7.4"
uuid = { version = "1.2.1", features = ["v4"] }
anyhow = "1.0.56"
