[tool.poetry]
name = "spotflow_device"
version = "2.0.4"
description = "Device SDK for Spotflow IoT Platform"
authors = ["Spotflow <support@spotflow.io>"]
[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
maturin = "^1.0.0"
requests = "^2.28.1"
azure-identity = "^1.10.0"

[project]
name = "spotflow_device"
requires-python = ">=3.7"
description = "Device SDK for Spotflow IoT Platform"
readme = "README.md"
keywords = ["spotflow", "iot", "device", "sdk"]
authors = [
    {name = "Spotflow", email = "support@spotflow.io"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://iot.spotflow.io/platform"
Documentation = "https://docs.spotflow.io/device-sdk/python/"
Changelog = "https://github.com/spotflow-io/device-sdk/blob/main/spotflow-py/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
